fix: исправление ошибок после первой итерации